--- a/write-ups/html/challenge-1.html
+++ b/write-ups/html/challenge-1.html
@@ -91,7 +91,7 @@ participants
 <p><img src="https://i.imgur.com/zWnck7q.png" alt=""></p>
 <p>I’ve to be honest. At this time I felt like 😕… It took me a while to notice that there were other exported functions:</p>
 <p><img src="https://i.imgur.com/bHMLaDg.png" alt=""></p>
-<p>Each one contains a single char that chained to others compose the last part of the flag: <code>_and_cool}</code>.</p>
+<p>Each one returns a single char that chained to others compose the last part of the flag: <code>_and_cool}</code>.</p>
 <h3 id="my-first-ever-flag">My first ever flag</h3>
 <p>Finally we have the full flag:</p>
 <p><code>flag{so_much_static_analysis_much_wow_and_cool}</code></p>
